# Sentinel

./: .gitignore  CMakeLists.txt  README.md  imgui.ini  sentinel.json
src/: main.cpp
src/http/: poll.cpp  poll.h
src/parsenrender/: json.cpp  json.h
src/render/: init.cpp  init.h
src/sse/: sse.cpp  sse.h
src/utils/: util.cpp  util.h
src/widget/: widget.cpp  widget.h
